--- a/Palworld/sample.env
+++ b/Palworld/sample.env
@@ -90,7 +90,7 @@ SERVER_PASSWORD=serverPasswordHere
 PUBLIC_PORT=8211
 PUBLIC_IP=
 RCON_ENABLED=true
-# RCON_PORT=25575
+RCON_PORT=25575
 REGION=America
 USEAUTH=true
 BAN_LIST_URL=https://api.palworldgame.com/api/banlist.txt
